[package]
name = "rs-brainf"
version = "0.0.0"
authors = ["DGCK81LNN <54282183+DGCK81LNN@users.noreply.github.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7", optional = true }
num = "0.4.1"
paste = "1.0.14"
serde = { version = "1.0.188", featuers = ["derive"] }
serde-wasm-bindgen = "0.6.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = "s"
